# dataforge

./: .gitignore  LICENSE  README.md  pyproject.toml
dataforge/: __init__.py  __main__.py  cli.py  config.py
dataforge/core/: __init__.py  errors.py  messages.py  rng.py  styles.py  types.py
dataforge/generation/: __init__.py  base.py  discovery.py  pipeline.py  pools.py
dataforge/training/: __init__.py  dpo.py  merge.py  sft.py
dataforge/validation/: __init__.py  quality_gates.py  stats.py  structural.py  template_detection.py
examples/customer_support/: config.yaml  data_pools.py  tools.json
examples/customer_support/generators/: __init__.py  analytics.py  dpo_pairs.py  escalation.py  knowledge_base.py  ticket_creation.py  ticket_search.py
examples/restaurant/: config.yaml  data_pools.py  tools.json
examples/restaurant/generators/: __init__.py  complex_scenarios.py  dpo_pairs.py  menu_search.py  order_management.py  reservations.py  reviews.py
tests/: test_messages.py  test_pipeline.py  test_quality_gates.py  test_restaurant_generation.py  test_rng.py  test_styles.py  test_template_detection.py  test_validation.py
