[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataforge"
version = "0.1.0"
description = "Deterministic synthetic dataset generation toolkit for LLM tool-calling fine-tuning"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Nicola Cucurachi", email = "ados.labsproject@gmail.com" },
]
keywords = [
    "llm",
    "fine-tuning",
    "dataset",
    "sft",
    "dpo",
    "lora",
    "synthetic-data",
    "tool-calling",
    "function-calling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/adoslabsproject-gif/dataforge"
Repository = "https://github.com/adoslabsproject-gif/dataforge"
Issues = "https://github.com/adoslabsproject-gif/dataforge/issues"

[project.optional-dependencies]
train = [
    "torch>=2.0",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.8",
    "datasets>=2.18",
    "bitsandbytes>=0.43",
    "accelerate>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
all = ["dataforge[train,dev]"]

[project.scripts]
dataforge = "dataforge.cli:main"

[project.entry-points."dataforge.generators"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["dataforge"]
